--- a/index.html
+++ b/index.html
@@ -7,39 +7,44 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no,
 		shrink-to-fit=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 
-	<title>Basic Template App</title>
+	<title>Espruino Motion Sensor Web</title>
+
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<style>
 		@import 'ui/css/evothings-app.css';
 	</style>
 
 	<script>
-	// Redirect console.log to Evothings Workbench.
-	if (window.hyper && window.hyper.log) { console.log = hyper.log }
+		// Redirect console.log to Evothings Workbench.
+		if (window.hyper && window.hyper.log) { console.log = hyper.log }
 	</script>
 
 </head>
 
 <body ontouchstart=""><!-- ontouchstart="" enables low-delay CSS transitions. -->
 
-	<header>
-		<button class="back" onclick="history.back()">
-			<img src="ui/images/arrow-left.svg" />
-		</button>
+<header>
+	<button class="back" onclick="history.back()">
+		<img src="ui/images/arrow-left.svg" />
+	</button>
 
-		<img class="logotype" src="ui/images/logo.svg" alt="Evothings" />
+	<img class="logotype" src="ui/images/logo.svg" alt="Evothings" />
 
-		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
-	</header>
+	<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
+</header>
 
-	<h1>TODO: Add app title</h1>
+<h1>Espruino Motion Sensor Web</h1>
 
-	<p>This is a basic template for an Evothings app.</p>
+<p>Here you can see the last three motion detections</p>
 
-	<script src="cordova.js"></script>
-	<script src="libs/evothings/evothings.js"></script>
-	<script src="libs/evothings/ui/ui.js"></script>
-	<!-- TODO: Add libraries that you need -->
+<div id="motion"></div>
+
+<script src="cordova.js"></script>
+<script src="libs/evothings/evothings.js"></script>
+<script src="libs/evothings/ui/ui.js"></script>
+
+<!-- TODO: Add libraries that you need -->
 
 </body>
 
